--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clawdin",
+  "name": "clawdin-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,22 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
-    "@supabase/ssr": "^0.1.0",
-    "next": "14.1.0",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "^2.0.0",
-    "wagmi": "^2.0.0",
-    "@tanstack/react-query": "^5.0.0"
+    "@supabase/supabase-js": "^2.43.0",
+    "@supabase/ssr": "^0.3.0"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3"
   }
 }
